# 2023-Python-Crash-Course-3ed-Try-It-Yourself

./: .gitignore  README.md
chapter02/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py
chapter03/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
chapter04/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py
chapter05/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
chapter06/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py
chapter07/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py
chapter08/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py
chapter08/15/: printing_functions.py  printing_models.py
chapter08/16/: hello.py  world.py
chapter09/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py
chapter09/10/: app.py  restaurant.py
chapter09/11/: app.py  user.py
chapter09/12/: admin.py  app.py  user.py
chapter10/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py
chapter10/data/: dogs.txt  learning_python.txt  pg75976.txt
chapter11/: main.py  pyproject.toml
chapter11/01/: city_functions.py  test_city_country.py
chapter11/02/: city_functions.py  (+1 more)
chapter15/: pyproject.toml
chapter15/src/: 01.py  (+1 more)
chapter16/: main.py  pyproject.toml
chapter17/: main.py  pyproject.toml
chapter17/src/: 01.py  02.py
chapter17/src/p03/: __init__.py
chapter17/tests/: test_get.py
(+21 files in other folders)
