[project]
name = "chapter17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.pytest.ini_options]
pythonpath = ["src"]
